--- a/fr/contribute.po
+++ b/fr/contribute.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-22 00:03+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: Eric Lavarde <ewl+transifex@lavar.de>, 2018\n"
 "Language-Team: French (https://www.transifex.com/delta-chat/teams/76181/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -36,8 +36,8 @@ msgid ""
 "Delta Chat is open source and free of charge. You can contribute in many "
 "ways to bring the development further!"
 msgstr ""
-"Delta Chat est open source et gratuit. Vous pouvez contribuer de plusieurs "
-"façons pour faire avancer le développement!"
+"Delta Chat est un logiciel libre et gratuit. Vous pouvez contribuer de "
+"plusieurs façons pour faire avancer le développement!"
 
 #: ../en/contribute.md:11
 msgid "# Channels"
@@ -46,7 +46,7 @@ msgstr "# Rester en contact"
 #: ../en/contribute.md:13
 msgid "If you want to talk with us you may:"
 msgstr ""
-"En plus des [email](../fr/imprint), vous pouvez nous contacter par les "
+"En plus des [courriels](../fr/imprint), vous pouvez nous contacter par les "
 "canaux suivants:"
 
 #: ../en/contribute.md:15
@@ -55,9 +55,9 @@ msgid ""
 "- Collaborate through the [Github Delta Chat repositories](https://github.com/deltachat/)\n"
 "- Join IRC channel **#deltachat** on [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
 msgstr ""
-"- Collaborez à travers les [dépôts Github Delta Chat](https://github.com/deltachat/)\n"
-"- Rejoignez le canal IRC **#deltachat** sur [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)\n"
-"- Rejoignez les discussions de la communauté sur la [liste de diffusion Delta Chat](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/)"
+"- Rejoignez les discussions de la communauté sur la [liste de diffusion Delta Chat](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/)\n"
+"- Collaborez au travers des [dépôts Github Delta Chat](https://github.com/deltachat/)\n"
+"- Rejoignez le canal IRC **#deltachat** sur [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
 
 #: ../en/contribute.md:20
 msgid "# Donate"
@@ -79,7 +79,7 @@ msgid ""
 msgstr ""
 "- IBAN DE86100777770428658900, BIC NORSDE51XXX\n"
 "- PayPal ou carte de crédit: [paypal.me/deltachat](https://paypal.me/deltachat/20)\n"
-"- Envoyez de bitcoins à [18e3zwis2raitdZVhEhHHT7xG6oXsZte9L](bitcoin:18e3zwis2raitdZVhEhHHT7xG6oXsZte9L)"
+"- Envoyez des bitcoins à [18e3zwis2raitdZVhEhHHT7xG6oXsZte9L](bitcoin:18e3zwis2raitdZVhEhHHT7xG6oXsZte9L)"
 
 #: ../en/contribute.md:28
 msgid ""
@@ -119,7 +119,7 @@ msgid ""
 "We are looking for open source developers who are familiar with C, Java, Android, iOS, Windows, Linux or Mac.\n"
 "Edit your own [Delta Chat](https://github.com/deltachat/) fork and send a pull request."
 msgstr ""
-"Nous recherchons des développeurs open source qui connaissent le C, Java, Android, iOS, Windows, Linux ou Mac.\n"
+"Nous recherchons des développeurs en logiciel libre qui connaissent le C, Java, Android, iOS, Windows, Linux ou Mac.\n"
 "Modifiez votre propre fork [Delta Chat](https://github.com/deltachat/) et envoyez nous une requête de modification."
 
 #: ../en/contribute.md:45
@@ -130,13 +130,13 @@ msgid ""
 "request."
 msgstr ""
 "La même chose s'applique pour **cette page Web** - peu importe si vous avez "
-"des améliorations plus ou moins grandes: Modifiez facilement cette page "
+"des améliorations plus ou moins importantes: modifiez simplement cette page "
 "[ici](https://github.com/deltachat/deltachat-pages) et envoyez-nous une "
 "demande de modification."
 
 #: ../en/contribute.md:47
 msgid "# Recommendation"
-msgstr "# Recommendation"
+msgstr "# Recommandation"
 
 #: ../en/contribute.md:49
 msgid ""
@@ -145,10 +145,10 @@ msgid ""
 "With Version 1.0 Delta Chat will become market-ready and a recommendation "
 "for _everyone_. "
 msgstr ""
-"Actuellement, Delta Chat est toujours en état bêta et ne convient qu'aux "
+"Actuellement, Delta Chat est toujours en état beta et ne convient qu'aux "
 "utilisateurs désirants le tester. Les gens qui l'utilisent aujourd'hui "
-"devraient considérer que les choses changent. Depuis la version 1.0, Delta "
-"Chat deviendra stable et une recommandable pour _tout le monde_."
+"doivent tenir compte du fait que les choses changent. À partir de la version"
+" 1.0, Delta Chat deviendra stable et recommandable pour _tout le monde_."
 
 #: ../en/contribute.md:52
 msgid "# Bug Reports"
@@ -157,7 +157,7 @@ msgstr "# Rapports d'erreur"
 #: ../en/contribute.md:54
 msgid "Use the following **Issue Trackers** to report bugs."
 msgstr ""
-"Utilisez les **rapports d'erreur** suivants pour signaler des erreurs."
+"Utilisez ces **systèmes de suivi de problèmes** pour signaler des erreurs."
 
 #: ../en/contribute.md:56
 msgid ""
