--- a/fr/download.po
+++ b/fr/download.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-22 00:03+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: Eric Lavarde <ewl+transifex@lavar.de>, 2018\n"
 "Language-Team: French (https://www.transifex.com/delta-chat/teams/76181/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -43,7 +43,7 @@ msgid ""
 msgstr ""
 "Une version beta pour Android est disponible sur F-Droid. Après la [version 1.0 stable](https://github.com/deltachat/deltachat-android/milestone/1), la disponibilité sur Google Play suivra.\n"
 "D'autres variantes pour iOS, Mac, Linux ou Windows sont prévues.\n"
-"Vous pouvez activement [nous soutenir](../fr/contribute) dans le développement."
+"Vous pouvez activement [nous soutenir](../fr/contribute) en terme de développement."
 
 #: ../en/download.md:15
 msgid "## Android (Beta)"
@@ -54,8 +54,8 @@ msgid ""
 "[<img src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Get it on F-Droid\" width=\"200\" />](https://f-droid.org/app/com.b44t.messenger)\n"
 "<img src=\"../assets/home/get-it-on-gplay.png\" alt=\"Get it on Google Play\" width=\"200\" style=\"filter: opacity(.3) grayscale(100%);\" />"
 msgstr ""
-"[<img src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Get it on F-Droid\" width=\"200\" />](https://f-droid.org/packages/com.b44t.messenger)\n"
-"<img src=\"../assets/home/get-it-on-gplay.png\" alt=\"Get it on Google Play\" width=\"200\" style=\"filter: opacity(.3) grayscale(100%);\" />"
+"[<img src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Récupère le sur F-Droid\" width=\"200\"/>](https://f-droid.org/app/com.b44t.messenger)\n"
+"<img src=\"../assets/home/get-it-on-gplay.png\" alt=\"Récupère le sur Google Play\" style=\"filter: opacity(.3) grayscale(100%);\" width=\"200\"/>"
 
 #: ../en/download.md:20
 msgid ""
@@ -63,8 +63,8 @@ msgid ""
 "* [Download APK](https://github.com/deltachat/deltachat-android/releases) (experienced users only)\n"
 "* [View Changelog]({% include changelog-url %})"
 msgstr ""
-"* [Télécharger depuis F-Droid](https://f-droid.org/packages/com.b44t.messenger)\n"
-"* [Download APK](https://github.com/deltachat/deltachat-android/releases) (experienced users only)\n"
+"* [Télécharger depuis F-Droid](https://f-droid.org/app/com.b44t.messenger)\n"
+"* [Télécharger le fichier APK](https://github.com/deltachat/deltachat-android/releases) (seulement pour utilisateurs expérimentés)\n"
 "* [Voir le journal des changements]({% include changelog-url %})"
 
 #: ../en/download.md:25
@@ -77,7 +77,8 @@ msgid ""
 "AppStore\" width=\"200\" style=\"filter: opacity(.3) grayscale(100%);\" />"
 msgstr ""
 "<img src=\"../assets/home/get-it-on-ios.png\" alt=\"Télécharger depuis "
-"l'AppStore\" width=\"200\" style=\"filter: opacity(.3) grayscale(100%);\" />"
+"l'AppStore d'Apple\" style=\"filter: opacity(.3) grayscale(100%);\" "
+"width=\"200\"/>"
 
 #: ../en/download.md:29
 msgid "## Linux"
@@ -89,7 +90,7 @@ msgid ""
 "Further details are provided in our [FAQ](help#multiclient) page."
 msgstr ""
 "Delta Chat pour Linux n'est pas encore disponible. Cependant, il est possible d'exécuter l'application Android dans [Anbox](https://anbox.io) (Android dans une boîte) sur votre bureau.\n"
-"De plus d'informations sont fournies sur notre page [FAQ](../fr/help#multiclient)."
+"Plus d'informations sont fournies sur notre page d'[Aide](../fr/help#multiclient)."
 
 #: ../en/download.md:34
 msgid "## Windows"
