--- a/fr/imprint.po
+++ b/fr/imprint.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-22 00:03+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: Eric Lavarde <ewl+transifex@lavar.de>, 2018\n"
 "Language-Team: French (https://www.transifex.com/delta-chat/teams/76181/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,6 +38,10 @@ msgid ""
 "Friedrich-Ebert-Str. 1 B  \n"
 "25348 Glückstadt, Germany"
 msgstr ""
+"Delta Chat  \n"
+"c/o Björn Petersen  \n"
+"Friedrich-Ebert-Str. 1 B  \n"
+"25348 Glückstadt, Allemagne"
 
 #: ../en/imprint.md:13
 msgid ""
@@ -45,13 +49,18 @@ msgid ""
 "Phone: +49 4124 603889  \n"
 "USt-IdNr. DE214707533"
 msgstr ""
+"Courriel: {% include email-link %}\n"
+"Téléphone: +49 4124 603889\n"
+"Numéro de TVA intracommunautaire: DE214707533"
 
 #: ../en/imprint.md:17
 msgid "[Community channels](contribute)"
-msgstr ""
+msgstr "[Canaux communautaires](contribute)"
 
 #: ../en/imprint.md:19
 msgid ""
 "The mailing list server is operated through "
 "<https://github.com/codespeaknet/sysadmin>."
 msgstr ""
+"Le serveur de listes courriels sont gérés par "
+"<https://github.com/codespeaknet/sysadmin>."
