--- a/sq/contribute.po
+++ b/sq/contribute.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-22 00:03+0200\n"
+"POT-Creation-Date: 2018-04-22 12:24+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Besnik <besnik@programeshqip.org>, 2018\n"
 "Language-Team: Albanian (https://www.transifex.com/delta-chat/teams/76181/sq/)\n"
@@ -93,13 +93,13 @@ msgstr "# Përkthim"
 
 #: ../en/contribute.md:33
 msgid ""
-"Help to translate Delta Chat into your language using \n"
-"[Transifex](https://www.transifex.com/delta-chat/delta-chat-android/).\n"
+"Help to translate the Delta Chat app or the delta.chat website into your language using\n"
+"[Transifex](https://www.transifex.com/delta-chat/public/).\n"
 "Alternatively, you can download [this file](https://raw.githubusercontent.com/deltachat/deltachat-android/master/MessengerProj/src/main/res/values/strings.xml) and [send](imprint) us the translated version."
 msgstr ""
-"Ndihmoni të përkthehet Delta Chat-i në gjuhën tuaj, përmes\n"
-"[Transifex](https://www.transifex.com/delta-chat/delta-chat-android/).\n"
-"Ndryshe, mund të shkarkoni [këtë kartelë](https://raw.githubusercontent.com/deltachat/deltachat-android/master/MessengerProj/src/main/res/values/strings.xml) dhe [dërgonani](imprint) versionin e përkthyer."
+"Ndihmoni të përkthehet aplikacioni ose sajti i Delta Chat-it në gjuhët tuaj duke përdorur\n"
+"[Transifex](https://www.transifex.com/delta-chat/public/).\n"
+"Ose ndryshe, mund të shkarkoni [këtë kartelë](https://raw.githubusercontent.com/deltachat/deltachat-android/master/MessengerProj/src/main/res/values/strings.xml) dhe [të na dërgoni](imprint) versionin e përkthyer."
 
 #: ../en/contribute.md:37
 msgid ""
