--- a/fr/contribute.po
+++ b/fr/contribute.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-22 00:03+0200\n"
+"POT-Creation-Date: 2018-04-22 12:24+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Eric Lavarde <ewl+transifex@lavar.de>, 2018\n"
 "Language-Team: French (https://www.transifex.com/delta-chat/teams/76181/fr/)\n"
@@ -95,12 +95,10 @@ msgstr "# Traduction"
 
 #: ../en/contribute.md:33
 msgid ""
-"Help to translate Delta Chat into your language using \n"
-"[Transifex](https://www.transifex.com/delta-chat/delta-chat-android/).\n"
+"Help to translate the Delta Chat app or the delta.chat website into your language using\n"
+"[Transifex](https://www.transifex.com/delta-chat/public/).\n"
 "Alternatively, you can download [this file](https://raw.githubusercontent.com/deltachat/deltachat-android/master/MessengerProj/src/main/res/values/strings.xml) and [send](imprint) us the translated version."
 msgstr ""
-"Aidez à traduire Delta Chat dans votre langue en utilisant [Transifex](https://www.transifex.com/delta-chat/delta-chat-android/).\n"
-"Alternativement, vous pouvez télécharger [ce fichier](https://raw.githubusercontent.com/deltachat/deltachat-android/master/MessengerProj/src/main/res/values/strings.xml) et [nous](../fr/imprint) envoyer la version traduite."
 
 #: ../en/contribute.md:37
 msgid ""
