--- a/pt/contribute.po
+++ b/pt/contribute.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-22 00:03+0200\n"
+"POT-Creation-Date: 2018-04-22 12:24+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
 "Language-Team: Portuguese (https://www.transifex.com/delta-chat/teams/76181/pt/)\n"
@@ -83,14 +83,10 @@ msgstr "# Traduções"
 
 #: ../en/contribute.md:33
 msgid ""
-"Help to translate Delta Chat into your language using \n"
-"[Transifex](https://www.transifex.com/delta-chat/delta-chat-android/).\n"
+"Help to translate the Delta Chat app or the delta.chat website into your language using\n"
+"[Transifex](https://www.transifex.com/delta-chat/public/).\n"
 "Alternatively, you can download [this file](https://raw.githubusercontent.com/deltachat/deltachat-android/master/MessengerProj/src/main/res/values/strings.xml) and [send](imprint) us the translated version."
 msgstr ""
-"Ajude a traduzir o Delta Chat para sua língua usando:\n"
-"[Transifex](https://www.transifex.com/delta-chat/delta-chat-android/) ou\n"
-"[Android Studio](https://developer.android.com/studio/write/translations-editor.html) com um Pull Request.\n"
-"Alternativamente, você pode nos mandar uma tradução do arquivo \"strings.xml\"."
 
 #: ../en/contribute.md:37
 msgid ""
