--- a/pl/contribute.po
+++ b/pl/contribute.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-22 12:24+0200\n"
+"POT-Creation-Date: 2018-04-23 00:02+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Telegram Polska <sebek@life.pl>, 2018\n"
 "Language-Team: Polish (https://www.transifex.com/delta-chat/teams/76181/pl/)\n"
@@ -97,6 +97,9 @@ msgid ""
 "[Transifex](https://www.transifex.com/delta-chat/public/).\n"
 "Alternatively, you can download [this file](https://raw.githubusercontent.com/deltachat/deltachat-android/master/MessengerProj/src/main/res/values/strings.xml) and [send](imprint) us the translated version."
 msgstr ""
+"Pomóż tłumaczyć aplikację Delta Chat lub stronę delta.chat na swój język za pomocą \n"
+"[Transifexa](https://www.transifex.com/delta-chat/public/).\n"
+"Możesz również pobrać [ten plik](https://raw.githubusercontent.com/deltachat/deltachat-android/master/MessengerProj/src/main/res/values/strings.xml) i [wysłać](imprint) nam przetłumaczoną wersję."
 
 #: ../en/contribute.md:37
 msgid ""
