--- a/fr/features.po
+++ b/fr/features.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-23 00:02+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: Arnaud Pernet, 2018\n"
 "Language-Team: French (https://www.transifex.com/delta-chat/teams/76181/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,7 +37,7 @@ msgid ""
 "better, safer and user-optimised."
 msgstr ""
 "Delta Chat est une nouvelle messagerie instantanée, comme un email mais dans"
-" une style moderne. Simplement mieux, plus sûr et plus convivial."
+" une style moderne.<br>Simplement mieux, plus sûr et plus convivial."
 
 #: ../en/features.md:10
 msgid ""
@@ -53,7 +53,7 @@ msgstr "![Screenshot](../assets/features/start-img4.png)"
 
 #: ../en/features.md:14
 msgid "Make use of the numerous features and advantages:"
-msgstr "## Profitez des nombreux avantages suivants:"
+msgstr "Profitez des nombreux avantages suivants:"
 
 #: ../en/features.md:16
 msgid ""
@@ -72,14 +72,14 @@ msgid ""
 msgstr ""
 "- Delta Chat est la messagerie avec la **plus grande base d'utilisateurs au monde**: tout client de messagerie sur n'importe quel système d'exploitation est compatible\n"
 "- Architecture distribuée: il n'y a pas **de serveur central** Delta Chat\n"
-"- Indépendant: vous n'êtes **pas dépendant** de service ou serveur externe, Delta Chat utilise uniquement votre serveur de messagerie.\n"
+"- Indépendant: vous n'êtes **pas dépendant** de service ou serveur externe - Delta Chat utilise uniquement votre serveur de messagerie.\n"
 "- Votre compte n''est pas dépendant d'un numéro de téléphone portable\n"
 "- Rapide: envoyer vos messages **instantanément** - Interface rapide\n"
-"- Puissant: messages **illimités**, images, vidéos, messages audio et bien plus, compatible avec d'autres clients\n"
-"- Gratuit: Delta Chat sera toujours: **Gratuit** - Open Source, **sans publicités** et utilisable sans abonnement\n"
+"- Puissant: messages **illimités**, images, vidéos, messages audio et bien plus - Compatible avec d'autres clients\n"
+"- Gratuit: Delta Chat sera toujours: **Gratuit** - Code source ouvert - **sans publicités** - Utilisable sans abonnement\n"
 "- Sûr: **chiffré** avec tous les meilleurs algorithmes récents - Ouvert pour l'examen du code source\n"
 "- Protégé: Delta Chat vous protège contre les **spam**\n"
-"- Loyal: Votre **annuaire téléphonique** reste sur votre smartphone - Il est **pas téléchargé** partout\n"
+"- Loyal: votre **annuaire téléphonique** reste sur votre smartphone - Il est **pas téléchargé** partout\n"
 "- Anonyme: les **métadonnées** comme _Qui_ communique avec _Qui_, _Quand_ et _Ou_ ne sont **pas collectées**\n"
 "- Dynamique: Delta Chat propose des **discussions de groupe**"
 
@@ -89,5 +89,6 @@ msgid ""
 "chatting better](https://delta.chat/en/2017-05-31-delta-makes-chatting-"
 "better)."
 msgstr ""
-"Détails sur les fonctions et l'implémentation dans [FAQ](../fr/help)<br>\n"
-"D'autres raisons et motivations peuvent être trouvées dans l'article de blog en anglais: [Delta makes chatting better](https://delta.chat/en/2017-05-31-delta-makes-chatting-better)."
+"D'autres raisons et motivations peuvent être trouvées dans l'article de blog"
+" en anglais: [Delta makes chatting better](https://delta.chat/en/2017-05-31"
+"-delta-makes-chatting-better)."
