--- a/fr/contribute.po
+++ b/fr/contribute.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-23 00:02+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Eric Lavarde <ewl+transifex@lavar.de>, 2018\n"
+"Last-Translator: Arnaud Pernet, 2018\n"
 "Language-Team: French (https://www.transifex.com/delta-chat/teams/76181/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -45,9 +45,7 @@ msgstr "# Rester en contact"
 
 #: ../en/contribute.md:13
 msgid "If you want to talk with us you may:"
-msgstr ""
-"En plus des [courriels](../fr/imprint), vous pouvez nous contacter par les "
-"canaux suivants:"
+msgstr "Pour nous contacter, vous pouvez:"
 
 #: ../en/contribute.md:15
 msgid ""
@@ -55,9 +53,9 @@ msgid ""
 "- Collaborate through the [Github Delta Chat repositories](https://github.com/deltachat/)\n"
 "- Join IRC channel **#deltachat** on [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
 msgstr ""
-"- Rejoignez les discussions de la communauté sur la [liste de diffusion Delta Chat](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/)\n"
-"- Collaborez au travers des [dépôts Github Delta Chat](https://github.com/deltachat/)\n"
-"- Rejoignez le canal IRC **#deltachat** sur [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
+"- Rejoindre les discussions de la communauté sur la [liste de diffusion Delta Chat](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/)\n"
+"- Collaborer au travers des [dépôts Github Delta Chat](https://github.com/deltachat/)\n"
+"- Rejoindre le canal IRC **#deltachat** sur [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
 
 #: ../en/contribute.md:20
 msgid "# Donate"
@@ -99,6 +97,8 @@ msgid ""
 "[Transifex](https://www.transifex.com/delta-chat/public/).\n"
 "Alternatively, you can download [this file](https://raw.githubusercontent.com/deltachat/deltachat-android/master/MessengerProj/src/main/res/values/strings.xml) and [send](imprint) us the translated version."
 msgstr ""
+"Aidez a traduire l'application Delta Chat ou le site internet delat.chat dans votre langue en utilisant [Transifex](https://www.transifex.com/delta-chat/public/)\n"
+"Alternativement, vous pouvez télécharger [this file](https://raw.githubusercontent.com/deltachat/deltachat-android/master/MessengerProj/src/main/res/values/strings.xml) et [nous](imprint) envoyer la version traduite"
 
 #: ../en/contribute.md:37
 msgid ""
@@ -117,7 +117,7 @@ msgid ""
 "We are looking for open source developers who are familiar with C, Java, Android, iOS, Windows, Linux or Mac.\n"
 "Edit your own [Delta Chat](https://github.com/deltachat/) fork and send a pull request."
 msgstr ""
-"Nous recherchons des développeurs en logiciel libre qui connaissent le C, Java, Android, iOS, Windows, Linux ou Mac.\n"
+"Nous recherchons des développeurs en code source ouvert qui connaissent le C, Java, Android, iOS, Windows, Linux ou Mac.\n"
 "Modifiez votre propre fork [Delta Chat](https://github.com/deltachat/) et envoyez nous une requête de modification."
 
 #: ../en/contribute.md:45
@@ -165,4 +165,4 @@ msgid ""
 msgstr ""
 "- [Delta Chat Android](https://github.com/deltachat/deltachat-android/issues)\n"
 "- [Delta Chat iOS](https://github.com/deltachat/deltachat-ios/issues)\n"
-"- [Core Library + Python](https://github.com/deltachat/deltachat-core/issues)"
+"- [Librarie principale + Python](https://github.com/deltachat/deltachat-core/issues)"
