--- a/fr/help.po
+++ b/fr/help.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-23 00:02+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: Arnaud Pernet, 2018\n"
 "Language-Team: French (https://www.transifex.com/delta-chat/teams/76181/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -88,16 +88,16 @@ msgid ""
 "- fully _Open Source_ and _Standards_ based"
 msgstr ""
 "- Indépendant de toute entreprise ou de service. _Vous possédez vos propres données_.\n"
-"- Vos données ne sont pas sauvegardées sur un serveur central; De cette façon, contrairement à la plupart des autres messageries, Delta Chat protège même vos métadonnées (qui écrit à qui?)\n"
+"- Vos données ne sont pas sauvegardées sur un serveur central; de cette façon, contrairement à la plupart des autres messageries, Delta Chat protège même vos métadonnées (qui écrit à qui?)\n"
 "- Vous ne distribuez pas votre carnet d'adresses à qui que ce soit.\n"
 "- _Rapide_ par l'utilisation de Push-IMAP\n"
-"- _Le plus de destinataire_ - Même les destinataires utilisant _pas_ Delta Chat peuvent être contactés\n"
+"- _La plus grande base d'utilisateurs_ - Même les destinataires n'utilisant _pas_ Delta Chat peuvent être contactés\n"
 "- _Compatible_ - pas seulement avec lui-même\n"
 "- Interface utilisateur _élegant_ et _simple_\n"
 "- _Système distribué_\n"
-"- _Pas de Spam_ - seuls les messages des utilisateurs connus sont affichés par défaut\n"
+"- _Pas de Spam_ - Seuls les messages des utilisateurs connus sont affichés par défaut\n"
 "- _Fiable_ - et _sûr_ pour un usage professionnel\n"
-"- Entièrement _OpenSource_ et basé sur les _Standards_"
+"- Code source entièrement _ouvert_ et basé sur les _standards_"
 
 #: ../en/help.md:35
 msgid "## What if the receiver does not use Delta Chat?"
@@ -125,8 +125,8 @@ msgid ""
 "- Messages from contacts **contacted by you**\n"
 "- **Replies** to messages send by you"
 msgstr ""
-"- Messages des contacts de votre **carnet d'adresses**\n"
-"- Messages des contacts **contactés par vous**\n"
+"- Les messages des contacts de votre **carnet d'adresses**\n"
+"- Les messages des contacts **contactés par vous**\n"
 "- Les **réponses** aux messages envoyés par vous"
 
 #: ../en/help.md:47
